Finalizado o header da pagina

--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,25 @@
     <title>Home Page Spotify</title>
 </head>
 <body>
-    
+    <header>
+        <div class="flex fixed bg-black w-full px-3 md:px-20 py-4">
+            <div class="container flex items-center mx-auto">
+                <div><a href="#"><img src="./img/spotify-logo.png" alt="Logo Spotify" class="w-20 md:w-125px"></a></div>
+                <div class="flex justify-end flex-1 md:hidden text-white text-3xl"><i class="fa fa-bars"></i></div>
+                <div class=" items-end flex-1 text-white font-bold hidden md:flex">
+                    <nav class="flex-1">
+                        <ul class="flex justify-end flex-1">
+                            <li class="px-4"><a class="hover:text-hoverBtn text-sm" href="#">Premiun</a></li>
+                            <li class="px-4"><a class="hover:text-hoverBtn text-sm" href="#">Ajuda</a></li>
+                            <li class="px-4"><a class="hover:text-hoverBtn text-sm" href="#">Baixar</a></li>
+                            <li class="px-4"><span class="border-r border-white"></span></li>
+                            <li class="px-4"><a class="hover:text-hoverBtn text-sm" href="#">Inscrever-se</a></li>
+                            <li class="px-4"><a class="hover:text-hoverBtn text-sm" href="#">Log-in</a></li>
+                        </ul>
+                    </nav>
+                </div>
+            </div>
+        </div>
+    </header>
 </body>
 </html>
